--- a/actividades/actividadTres/css/index.css
+++ b/actividades/actividadTres/css/index.css
@@ -1,8 +1,8 @@
 body{
-    background: linear-gradient(to right,rgb(150, 179, 193),rgb(37, 207, 37));
+    background: linear-gradient(to right,rgba(151, 217, 217, 0.471),rgb(37, 207, 37));
 }
 main{
-    margin-top:5%;
+    margin-top:1%;
     display:flex;
     align-items: center;
 }
@@ -40,6 +40,7 @@ div.row h1{
     width:30%;
     margin-left: 35%;
     margin-top: 3%;
+    margin-bottom: 2%;
 }
 .ocultar{
     display: none;
